Fix all issues with annotations and created test endpoint